--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.0",
     "unzipper": "^0.10.14"
